Fixed Experience sizing issues on mobile #2

--- a/client/mainpage.css
+++ b/client/mainpage.css
@@ -1829,7 +1829,7 @@ header {
 		}
 
 		.experienceFlexDetails {
-			width: 210px;
+			width: 215px;
 			font-size: 13px;
 		}
 
